# aiVoiceAgent

./: .env.example  .gitignore  CILA_Code_Review.docx  Dockerfile  README.md  S4_11_IMPLEMENTATION_PLAN.txt  TESTING.md  audit_live_rag.py  check_db_tables.py  debug_ready.py  debug_startup.py  dev_phone_log.txt  docker-compose.yml  kb_version.json  list_rag_data.py  phone1.txt  pyproject.toml  requirements.txt  run_demo_hit_miss.py  run_phone.ps1  run_server.py  server_err.txt  server_log.txt  server_stderr.txt  start_test_chat.ps1  task.md  testBeforeDeployement.md  test_chat.html  test_dg.py  test_e2e_governance.py  test_local_rag.py  test_logging_fix.py  test_mixed_language.py  test_output.txt  test_rag.py  test_safety_gate.py  test_strike_reset.py  test_traceback.txt  test_vad_final_output.txt  test_vad_output.txt  (+13 more)
agent_logging/: __init__.py  audit_logger.py  call_logger.py  voice_logger.py
assets/: fallback.mulaw
audit_logging/: recorder.py
config/: __init__.py  college_data.json  rag_thresholds.json
contracts/: __init__.py  auth.py  config.py  interfaces.py  language_guard.py  language_interceptor.py  policy.py  schemas.py  state.py
crm/: client.py  reconciliation_job.py
db-init/: 01_schema.sql
docs/: PARITY_PORT_OVERVIEW.md  api_keys_needed.md  error_log.md  kb_architecture.md  latency_benchmarks.md  latency_budget.md  parity_01_data_models.md  parity_02_fastapi_migration.md  parity_03_orchestrator_extraction.md  parity_04_governance.md  parity_05_logging.md  parity_06_connection_pooling.md  parity_07_rag.md  parity_08_gemini_swap.md  (+8 more)
k8s/: hpa.yaml  (+3 more)
(+64 files in other folders)
