[project]
name = "ai-voice-agent"
version = "0.2.0"
description = "Modular voice pipeline: Deepgram STT + Groq LLM + ElevenLabs TTS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
    "openai>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

# Tests use the built-in `unittest` framework so they run without extra deps:
#   uv run python -m unittest discover -s tests -p "test_*.py"
# If pytest is installed (`uv sync --extra dev`), it picks up the same files:
#   uv run pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
